# QWAMOS

./: .editorconfig  .flake8  .gitignore  .gitleaks.toml  .gitmodules  .markdownlint.json  .pylintrc  .shellcheckrc  ARTEMIS_EXECUTIVE_SUMMARY.md  ARTEMIS_GCP_SETUP.md  ARTEMIS_QUICKSTART.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DONATIONS.md  GITHUB_REPOSITORY_SETUP_SUMMARY.md  GPG_SIGNING.md  GPG_SIGNING_SETUP.md  INSTALLATION.md  LIBOQS_BUILD_SUCCESS.md  MAIN_DASHBOARD_COMPLETE.md  OPS_GUIDE.md  PHASE10_COMPLETION_SUMMARY.md  PHASE1_BUILD_COMPLETE.md  PHASE1_COMPLETE.md  PHASE3_AUDIT_REPORT.md  PHASE4_SESSION_SUMMARY.md  PHASE6_COMPLETION_SUMMARY.md  PHASE7_DEPLOYMENT_CHECKLIST.md  PHASE7_DEPLOYMENT_README.md  PHASE7_PACKAGE_MANIFEST.md  PHASE7_PROGRESS_SUMMARY.md  PHASE7_TRANSFER_INSTALLATION_GUIDE.md  PHASE8_V2_DOCUMENTATION_UPDATE.md  PHASE9_README_UPDATES.md  PHASES_COMPLETION_SUMMARY.md  PREBUILT_STATUS.md  PROJECT_STATUS.md  QWAMOS_Phase7_Checksum.txt  QWAMOS_Phase8_Checksum.txt  (+30 more)
.github/: CODEOWNERS  FUNDING.yml  SECURITY_ADVISORY_TEMPLATE.md  about.txt  project-automation.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: build-flutter-ui.yml  build-vm-templates.yml  build.yml  cache-cleanup.yml  cache-cleanup.yml.disabled  checksum-verify.yml  codeql.yml  doc-sync.yml  docker-build.yml  docs-validation.yml  forensic-audit.yml  jekyll.yml  lint.yml  nightly-security.yml  nightly.yml  project-automation.yml  readme-banner.yml  release-generator.yml  release-notes.yml  release-signing.yml  renovate.yml  reproducible-build.yml  sbom.yml  secret-scan.yml  static-binary-analysis.yml  test.yml  tests.yml  verify-signed-commits.yml
.wiki/: Investor-Home.md
ai/: README.md  ai_manager.py  ai_sandbox.py  qwamos-ai
ai/chatgpt/: chatgpt_controller.py
ai/claude/: claude_controller.py
ai/config/: chatgpt_config.json  claude_config.json  kali_gpt_config.json
ai/kali_gpt/: kali_gpt_controller.py
ai/scripts/: deploy_ai_services.sh  download_kali_gpt_model.sh
ai/security/: request_sanitizer.py
ai/systemd/: README.md  qwamos-ai-chatgpt.service  qwamos-ai-claude.service  qwamos-ai-kali-gpt.service  qwamos-ai-manager.service
ai/tests/: test_ai_integration.py  test_chatgpt.py  test_claude.py  test_kali_gpt.py
ai_app_builder/: DEPLOYMENT_SUMMARY.md  README.md  deploy_app_builder.sh  validate_phase9_deployment.sh
ai_app_builder/bridge/: QWAMOSAppBuilderBridge.java
ai_app_builder/config/: app_builder_config.json
android/: settings.gradle
assets/: badges.md
bootloader/: README.md  kyber1024_verify.c  kyber1024_verify.h  qwamos_defconfig
cluster/: cluster_coordinator.py  cluster_node.py
crypto/: argon2id_kdf.py  blake3_hasher.py  hardware_keystore.py  key_rotation.py  pqc_advanced.py  pqc_keystore.py
docker/: Dockerfile.build  Dockerfile.dev  README.md  docker-compose.yml
docs/: ANDROID_VM_SETUP_GUIDE.md  ARCHITECTURE.md  ASHIGARU_ANALYSIS.md  CHIMERA_DECOY_PROTOCOL.md  CNAME  GPG_SETUP.md  Gemfile  INVIZIBLE_PRO_INTEGRATION.md  KALI_GPT_INTEGRATION.md  KYBER_IMPLEMENTATION_NOTES.md  PHASE10_ADVANCED_HARDWARE_SECURITY.md  PHASE10_USB_KILLSWITCH_SCHEMATIC.md  PHASE3_HYPERVISOR_SPEC.md  PHASE4_IMPLEMENTATION_PLAN.md  PHASE5_COMPLETION_SUMMARY.md  PHASE5_INTEGRATION_CHECKLIST.md  PHASE5_NETWORK_ISOLATION.md  PHASE5_NO_ROOT_TESTING_PLAN.md  PHASE5_SHELL_TEST_RESULTS.md  PHASE5_TESTING_GUIDE.md  PHASE6_AI_ASSISTANTS_INTEGRATION.md  PHASE6_DEPLOYMENT_GUIDE.md  PHASE7_API_DOCUMENTATION.md  PHASE7_COMPLETION_SUMMARY.md  PHASE7_DEPLOYMENT_GUIDE.md  PHASE7_ML_THREAT_DETECTION.md  PHASE7_ML_TRAINING_GUIDE.md  PROJECT_STATUS.md  QWAMOS-SECURE-VOICE-IMPLEMENTATION.md  QWAMOS-Secure-Voice-PQ.md  QWAMOS_Hardening_Standard.md  QWAMOS_SLSA_Roadmap.md  QWAMOS_Security_Audit_Readiness_Certificate.md  README.md  SEAMLESS_DATA_MIGRATION.md  SECURE_KEYBOARD_SPEC.md  SELF_FLASHING_INSTALLER.md  SETUP_GUIDE.md  STORAGE_ENCRYPTION.md  TECHNICAL_ARCHITECTURE.md  (+15 more)
hypervisor/: ai_governor.py  gpu_manager.py  gpu_security_policy.py  kvm_manager.py  nic_enforcer.py  resource_monitor.py
initramfs/: init
kernel/: qwamos_config.sh
keyboard/: README.md
linting/: .markdownlintignore  .shfmt.yaml  README.md  ktlint-rules.yml
maintainers/: handbook.md
network/: api_rate_limiter.py  network_manager.py
qwamos/: DEPLOYMENT_STATUS.md  TEST_RESULTS.md
release-notes/: QWAMOS_v1.2.0.md  QWAMOS_v2.0.0.md
release-packages/: build_twrp_package.sh
reports/: CODEBASE_INVENTORY.md  MODULE_MAP.txt
reproducible/: README.md  build.sh  hash_manifest.json  verify.sh
sbom/: README.md  sbom-config.yml  sbom-ignore.txt
scripts/: artemis_quick_setup.sh
security/: DEPLOYMENT_COMPLETE.md  Makefile  QUICK_START.md  README.md  README_QWAMOS_SecurityLayer.md  ab_partition_isolation.py  deploy-to-device.sh  deploy_phase10.sh  firmware_integrity_monitor.py  ml_bootloader_override.py  qr_auth.py
signatures/: README.md
storage/: pqc_volume.py  volume_snapshots.py
tests/: __init__.py  requirements.txt  test_ai_governor.py  test_gpu_isolation.py  test_pqc_storage.py
tools/: release_notes_generator.py
ui/: BUILD_GUIDE.md  IMPLEMENTATION_GUIDE.md  README.md  pubspec.yaml
vm-templates/: README.md
(+600 files in other folders)
